2010-04-12  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Dirk Schulze.

        Add tests to handle that comma/whitespace around arc flags are optional
        and that arc flags can only be 0 or 1 in SVG path syntax: 
        https://bugs.webkit.org/show_bug.cgi?id=37431

        * svg/dom/fuzz-path-parser-expected.txt: One test now fails due to flags not 0 or 1
        * svg/dom/path-parser-expected.txt: Add test results for missing whitespace and flags not 0 or 1
        * svg/dom/script-tests/path-parser.js: Add 6 tests to check that whitespace is optional after flags and flags must be 0 or 1

2010-04-11  Tony Chang  <tony@chromium.org>

        Not reviewed, layout test fix for QT bots.

        Update paste expected results on QT and skip a new d&d test.

        * platform/qt/Skipped:
        * platform/qt/editing/pasteboard/onpaste-text-html-expected.txt: Added.

2010-04-11  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        [chromium] implement getData('text/html') for paste and drop events
        https://bugs.webkit.org/show_bug.cgi?id=37193

        * editing/pasteboard/onpaste-text-html-expected.txt: Added.
        * editing/pasteboard/onpaste-text-html.html: Added.
        * fast/events/ondrop-text-html-expected.txt: Added.
        * fast/events/ondrop-text-html.html: Added.
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/win/Skipped:

2010-04-11  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Add setWillSendRequestReturnsNull and setWillSendRequestClearHeader

        Unskip:
          http/tests/security/no-referrer.html
          fast/loader/onload-willSendRequest-null-for-frame.html
          fast/loader/onload-willSendRequest-null-for-script.html

        https://bugs.webkit.org/show_bug.cgi?id=37410

        * platform/qt/Skipped:

2010-04-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.
