@@ -1,3 +1,14 @@
+2010-04-12  David Hyatt  <hyatt@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        https://bugs.webkit.org/show_bug.cgi?id=37455, :visited doesn't work with multiple classes/ids.
+
+        Added fast/history/multiple-classes-visited.html.
+
+        * css/CSSStyleSelector.cpp:
+        (WebCore::CSSStyleSelector::SelectorChecker::checkSelector):
+
 2010-04-12  Dirk Schulze  <krit@webkit.org>
 
         Unreviewed build fix.
